# venus

./: .gitignore  Cargo.toml  README.md  build-rust.sh  build.sh  go.mod  go.sum  main.go
.github/workflows/: release.yml
config/: config.go
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: auth.js  images.js  projects.js
frontend/src/assets/: main.css
frontend/src/components/: AuthForm.vue  ExcalidrawWrapper.vue  ImageUpload.vue  LazyImage.vue  ProjectList.vue
frontend/src/config/: api.js
migrations/: 001_create_projects.sql  002_create_users.sql  003_create_images.sql
src/: auth.rs  auth_handlers.rs  config.rs  database.rs  handlers.rs  image_handlers.rs  main.rs  models.rs
util/jwt/: jwt.go
